--- a/Hero Adventure/Hero Adventure.csproj
+++ b/Hero Adventure/Hero Adventure.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttackBuffPickupTile.cs" />
     <Compile Include="CharacterTile.cs" />
     <Compile Include="EmptyTile.cs" />
     <Compile Include="EnemyTile.cs" />
@@ -66,7 +67,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tile.cs" />
+    <Compile Include="TyrantTile.cs" />
     <Compile Include="WallTile.cs" />
+    <Compile Include="WarlockTile.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
